--- a/app/src/main/res/layout/activity_detail_of_membership.xml
+++ b/app/src/main/res/layout/activity_detail_of_membership.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     <include layout="@layout/common_toolbar"/>
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
             android:background="@color/white"
             android:id="@+id/tablayout"
             android:layout_width="match_parent"
@@ -16,11 +16,11 @@
             app:tabTextColor="@color/color_666666"
     >
 
-    </android.support.design.widget.TabLayout>
-    <android.support.v4.view.ViewPager
+    </com.google.android.material.tabs.TabLayout>
+    <androidx.viewpager.widget.ViewPager
             android:id="@+id/view_pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-    </android.support.v4.view.ViewPager>
+    </androidx.viewpager.widget.ViewPager>
 </LinearLayout>
