--- a/app/src/main/res/layout/activity_processing_order.xml
+++ b/app/src/main/res/layout/activity_processing_order.xml
@@ -15,12 +15,12 @@
                 android:layout_height="wrap_content"
                 app:wshPrimaryColor="@color/colorPrimary"/>
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-        </android.support.v7.widget.RecyclerView>
+        </androidx.recyclerview.widget.RecyclerView>
 
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 </LinearLayout>
