--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -3,16 +3,18 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true">
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_marginStart="15dp"
             android:layout_marginTop="15dp">
         <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/search_bg">
+                android:background="@drawable/search_bg"
+                android:layout_marginEnd="65dp">
             <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -20,7 +22,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="15dp"/>
             <EditText
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:hint="搜索特权"
@@ -29,6 +31,7 @@
        
 
         <TextView
+                android:id="@+id/tv_close"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="取消"
@@ -36,7 +39,7 @@
                 android:textColor="@color/color_333333"
                 android:gravity="center_vertical"
                 android:layout_alignParentEnd="true"
-                android:paddingStart="10dp"
+                android:paddingStart="15dp"
                 android:paddingEnd="15dp"/>
     </RelativeLayout>
 
@@ -48,11 +51,11 @@
             android:textColor="@color/color_222222"
             android:layout_marginStart="15dp"
             android:layout_marginTop="21dp"/>
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="15dp">
 
-    </android.support.v7.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 </LinearLayout>
