--- a/app/src/main/res/layout/fragment_privilege.xml
+++ b/app/src/main/res/layout/fragment_privilege.xml
@@ -125,7 +125,7 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginEnd="15dp"/>
 
-            <android.support.v7.widget.CardView
+            <androidx.cardview.widget.CardView
                     android:layout_marginTop="15dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -177,7 +177,7 @@
                     <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
-                        <android.support.v7.widget.RecyclerView
+                        <androidx.recyclerview.widget.RecyclerView
                                 android:id="@+id/recycler_view"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
@@ -185,13 +185,13 @@
                                 android:layout_marginEnd="10dp"
                                 android:layout_marginTop="14dp">
 
-                        </android.support.v7.widget.RecyclerView>
+                        </androidx.recyclerview.widget.RecyclerView>
                     </RelativeLayout>
                 </LinearLayout>
-            </android.support.v7.widget.CardView>
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
-        <android.support.v7.widget.CardView
+        <androidx.cardview.widget.CardView
                 android:id="@+id/search"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
@@ -210,7 +210,7 @@
                     android:gravity="center"
                     android:drawableStart="@mipmap/search"
                     android:drawablePadding="4dp"/>
-        </android.support.v7.widget.CardView>
+        </androidx.cardview.widget.CardView>
 
     </FrameLayout>
 </ScrollView>
