--- a/app/src/main/res/layout/activity_login_verification_code.xml
+++ b/app/src/main/res/layout/activity_login_verification_code.xml
@@ -49,7 +49,6 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:maxLength="1"
-                android:textAlignment="center"
                 android:textCursorDrawable="@drawable/color_cursor"
                 android:layout_marginEnd="7dp"/>
         <EditText
@@ -89,7 +88,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="number"
                 android:maxLength="1"
-                android:gravity="center_horizontal"
+                android:gravity="center"
                 android:textCursorDrawable="@drawable/color_cursor"
                 android:layout_marginEnd="7dp"/>
         <EditText
