--- a/app/src/main/res/layout/item_order_processing.xml
+++ b/app/src/main/res/layout/item_order_processing.xml
@@ -81,7 +81,7 @@
                     android:textColor="@color/color_333333"/>
 
             <TextView
-                    android:id="@+id/tv_card_number"
+                    android:id="@+id/tv_content1"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -91,7 +91,7 @@
                     android:layout_marginTop="7dp"/>
 
             <TextView
-                    android:id="@+id/tv_order_number"
+                    android:id="@+id/tv_content2"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -100,15 +100,7 @@
                     android:textColor="@color/color_999999"/>
 
             <TextView
-                    android:id="@+id/tv_integral"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:text="获赠积分：5002.23"
-                    android:textSize="12sp"
-                    android:textColor="@color/color_999999"/>
-            <TextView
-                    android:id="@+id/tv_mid_msg4"
+                    android:id="@+id/tv_content3"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -116,6 +108,7 @@
                     android:textSize="12sp"
                     android:textColor="@color/color_999999"
                     android:visibility="gone"/>
+
         </LinearLayout>
 
         <LinearLayout
