--- a/app/src/main/res/layout/fragment_detail_all.xml
+++ b/app/src/main/res/layout/fragment_detail_all.xml
@@ -17,5 +17,10 @@
                 android:layout_height="match_parent">
 
         </androidx.recyclerview.widget.RecyclerView>
+        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+        </com.scwang.smartrefresh.layout.footer.ClassicsFooter>
     </com.scwang.smartrefresh.layout.SmartRefreshLayout>
 </LinearLayout>
