禧世通项目...

--- a/app/src/main/res/layout/fragment_privilege.xml
+++ b/app/src/main/res/layout/fragment_privilege.xml
@@ -155,7 +155,7 @@
                                 android:layout_marginStart="10dp"/>
 
                         <TextView
-                                android:layout_toStartOf="@+id/tv_end_time"
+                                android:layout_toStartOf="@+id/tv_end_time_hour"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="距活动结束:"
@@ -164,10 +164,26 @@
                                 android:layout_marginEnd="7.5dp"/>
 
                         <TextView
-                                android:id="@+id/tv_end_time"
+                                android:id="@+id/tv_end_time_hour"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="00:00:00"
+                                android:text="00:"
+                                android:textSize="12sp"
+                                android:textColor="@color/color_F86024"
+                                android:layout_toStartOf="@+id/tv_end_time_min"/>
+                        <TextView
+                                android:id="@+id/tv_end_time_min"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="00:"
+                                android:textSize="12sp"
+                                android:textColor="@color/color_F86024"
+                                android:layout_toStartOf="@+id/tv_end_time_sec"/>
+                        <TextView
+                                android:id="@+id/tv_end_time_sec"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="00"
                                 android:textSize="12sp"
                                 android:textColor="@color/color_F86024"
                                 android:layout_alignParentEnd="true"
