--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,14 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+    <style name="Splash" parent="AppTheme">
+        <item name="windowActionBar">false</item>//取消Actionbar
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>//设置全屏
+        <!--<item name="android:windowBackground">@mipmap/splash_bg</item>//设置背景-->
+    </style>
+
     <style name="MyBottomNavigationStyle" parent="Widget.Design.BottomNavigationView">
         <!--ripple的颜色-->
         <item name="colorControlHighlight">@color/colorAccent</item>
