--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,5 @@
     <color name="color_222222">#222222</color>
     <color name="color_191919">#191919</color>
     <color name="color_5AA2F4">#5AA2F4</color>
+    <color name="color_302F2B">#302F2B</color>
 </resources>
