--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,6 +22,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="15dp"/>
             <EditText
+                    android:id="@+id/et_search"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@null"
