--- a/app/src/main/res/layout/dialog_qrcode.xml
+++ b/app/src/main/res/layout/dialog_qrcode.xml
@@ -5,23 +5,52 @@
         android:layout_height="match_parent">
 
     <LinearLayout
-            android:layout_width="290dp"
-            android:layout_height="310dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="vertical"
             android:background="@drawable/dialog_normal">
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="订单二维码"
-                android:textSize="16sp"
-                android:textColor="#1A1A1A"
+                android:text="扫码付款"
+                android:textSize="17sp"
+                android:textColor="@color/color_333333"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"/>
+        <TextView
+                android:id="@+id/tv_customer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="客户:"
+                android:textSize="15sp"
+                android:textColor="@color/color_333333"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"/>
+        <TextView
+                android:id="@+id/tv_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="金额:"
+                android:textSize="15sp"
+                android:textColor="@color/color_333333"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="14dp"/>
         <ImageView
                 android:id="@+id/iv_qrcode"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="15dp"/>
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_marginStart="70dp"
+                android:layout_marginEnd="70dp"
+                android:layout_marginTop="27dp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="请将订单二维码给销售人员进行付款"
+                android:textSize="12sp"
+                android:textColor="@color/color_333333"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="26dp"
+                android:layout_marginBottom="25dp"/>
     </LinearLayout>
 </FrameLayout>
