--- a/app/src/main/res/layout/item_common.xml
+++ b/app/src/main/res/layout/item_common.xml
@@ -17,6 +17,7 @@
             android:text="加油卡充值"
             android:textColor="@color/color_333333"
             android:layout_centerHorizontal="true"
+            android:singleLine="true"
             android:textSize="12sp"
             android:layout_alignParentBottom="true"/>
 </RelativeLayout>
