--- a/app/src/main/res/layout/dialog_courier_number.xml
+++ b/app/src/main/res/layout/dialog_courier_number.xml
@@ -5,7 +5,7 @@
         android:layout_height="match_parent">
     <RelativeLayout
             android:layout_width="270dp"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/dialog_bg"
             android:layout_gravity="center">
 
@@ -52,6 +52,7 @@
                 android:textSize="15sp"
                 android:textColor="@color/color_5AA2F4"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="14dp"/>
+                android:layout_marginTop="14dp"
+                android:layout_marginBottom="10dp"/>
     </RelativeLayout>
 </FrameLayout>
