--- a/app/src/main/res/layout/item_flash_sale.xml
+++ b/app/src/main/res/layout/item_flash_sale.xml
@@ -18,6 +18,7 @@
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:layout_marginTop="10dp">
 
         <TextView
