禧世通项目...修复了搜索页面

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -27,6 +27,9 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:hint="搜索特权"
+                    android:imeOptions="actionSearch"
+                    android:singleLine="true"
+                    android:maxLines="1"
                     android:layout_marginStart="8dp"/>
         </LinearLayout>
        
