--- a/app/src/main/res/layout/item_order_processing.xml
+++ b/app/src/main/res/layout/item_order_processing.xml
@@ -89,7 +89,15 @@
                     android:textSize="12sp"
                     android:textColor="@color/color_999999"
                     android:layout_marginTop="7dp"/>
-
+            <TextView
+                    android:id="@+id/tv_content3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="获赠积分："
+                    android:textSize="12sp"
+                    android:textColor="@color/color_999999"
+                    android:visibility="gone"/>
             <TextView
                     android:id="@+id/tv_content2"
                     android:layout_width="wrap_content"
@@ -98,16 +106,6 @@
                     android:text="订单编号：CN13558633377"
                     android:textSize="12sp"
                     android:textColor="@color/color_999999"/>
-
-            <TextView
-                    android:id="@+id/tv_content3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:text="获赠积分：5002.23"
-                    android:textSize="12sp"
-                    android:textColor="@color/color_999999"
-                    android:visibility="gone"/>
 
         </LinearLayout>
 
