修改了一系列问题

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -27,6 +27,7 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:hint="搜索特权"
+                    android:textColorHint="@color/color_CCCCCC"
                     android:imeOptions="actionSearch"
                     android:singleLine="true"
                     android:maxLines="1"
