--- a/app/src/main/res/layout/common_toolbar.xml
+++ b/app/src/main/res/layout/common_toolbar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -10,34 +11,25 @@
             android:id="@+id/v_state_bar"
             android:layout_width="match_parent"
             android:layout_height="@dimen/status_bar_height"
-            android:background="@color/color_6BB467"/>
-    <RelativeLayout
-            android:id="@+id/rl_toobar"
+            android:background="@color/white"/>
+    <androidx.appcompat.widget.Toolbar
+            android:id="@+id/tb_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/color_6BB467">
-        <FrameLayout
-                android:id="@+id/fl_back"
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:layout_centerVertical="true"
-                android:visibility="invisible">
-            <ImageView
-                    android:layout_width="15dp"
-                    android:layout_height="22dp"
-                    android:src="@mipmap/back"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="19dp"/>
-        </FrameLayout>
-
-
+            android:background="@color/white"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:contentInsetEnd="0dp"
+            app:contentInsetLeft="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetStart="0dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
         <TextView
                 android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=""
-                android:textColor="@color/white"
-                android:layout_centerInParent="true"
+                android:layout_gravity="center"
+                android:textColor="@color/color_333333"
                 android:textSize="17sp"/>
-    </RelativeLayout>
+    </androidx.appcompat.widget.Toolbar>
 </LinearLayout>
