--- a/app/src/main/res/layout/activity_detail_of_membership.xml
+++ b/app/src/main/res/layout/activity_detail_of_membership.xml
@@ -12,6 +12,8 @@
             android:layout_height="44dp"
             app:tabIndicatorColor="@color/color_6BB467"
             app:tabIndicatorHeight="2dp"
+            app:tabRippleColor="@android:color/transparent"
+            app:tabBackground="@android:color/transparent"
             app:tabSelectedTextColor="@color/color_6BB467"
             app:tabTextColor="@color/color_666666"
     >
