--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,16 @@
             android:layout_weight="1">
 
     </FrameLayout>
+    <!--<fragment-->
+            <!--android:id="@+id/nav_host_fragment"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="0dp"-->
+            <!--android:layout_weight="1"-->
+            <!--android:name="androidx.navigation.fragment.NavHostFragment"-->
+            <!--app:defaultNavHost="true"-->
+            <!--app:navGraph="@navigation/nav_graph">-->
+
+    <!--</fragment>-->
     <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
