--- a/app/src/main/res/layout/item_myaddress.xml
+++ b/app/src/main/res/layout/item_myaddress.xml
@@ -3,20 +3,23 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="95dp"
+        android:layout_height="wrap_content"
         android:background="@color/white"
         android:foreground="?attr/selectableItemBackground">
-    <LinearLayout
+
+    <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
+
         <LinearLayout
+                android:id="@+id/ll_top"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="14.5dp"
                 android:layout_marginStart="16dp"
                 android:gravity="center">
+
             <TextView
                     android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
@@ -34,26 +37,29 @@
                     android:layout_marginStart="8dp"
                     android:textColor="@color/color_333333"/>
         </LinearLayout>
-        <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="15dp">
-            <TextView
-                    android:id="@+id/tv_address"
-                    android:layout_width="243dp"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:textSize="12sp"
-                    android:textColor="@color/color_999999"/>
-            <ImageView
 
-                    android:layout_width="20dp" android:layout_height="20dp"
-                    android:src="@mipmap/go"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="15dp"/>
-        </RelativeLayout>
-    </LinearLayout>
+        <TextView
+                android:layout_below="@+id/ll_top"
+                android:id="@+id/tv_address"
+                android:layout_width="243dp"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textSize="12sp"
+                android:textColor="@color/color_999999"
+                android:layout_marginTop="15dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="19dp"/>
+
+        <ImageView
+
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:src="@mipmap/go"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="15dp"
+                android:layout_centerVertical="true"/>
+    </RelativeLayout>
+
     <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
